# space-sim

./: .gitignore  CMakeLists.txt  build.sh
include/: flecs.h
src/: Components.cpp  Components.h  EntityManager.cpp  EntityManager.h  Simulation.h  Systems.cpp  Systems.h  flecs.c  main.cpp
